--- a/dev/_posts/2019-09-13-idioms.md
+++ b/dev/_posts/2019-09-13-idioms.md
@@ -1,46 +1,57 @@
 ---
 layout: post
-title: 2. Idioms(관용법)
+title: 시작하기 - 2. 관용구(Idioms)
 categories: dev
 tags: kotlin
 ---
 
-[**시작하기** - 관용법](https://kotlinlang.org/docs/reference/idioms.html)
+[원문: Getting Started - Idioms](https://kotlinlang.org/docs/reference/idioms.html)
 
-## DTO 만들기
+{% include_relative kotlin-reference-index.md %}
+
+## 목차
+{:.no_toc}
+0. this unordered seed list will be replaced by toc as unordered list
+{:toc}
+
+## DTO(Data Transfer Object) 만들기
 ```kotlin    
 data class Customer(val name: String, val email: String)
 ```
 위 코드는 다음과 같은 기능을 제공한다.
 
-- 모든 프로퍼티를 위한 getter(var의 경우 setter 역시))
+- 모든 프로퍼티를 위한 getter(맴버 변수를 val 대신 var로 선언할 경우 setter도 같이 생성))
 - equals()
 - hashCode()
 - toString()
 - copy()
-- 모든 프로퍼티를 위한 component1(), component2(), ...
+- 모든 프로퍼티를 위한 component1(), component2(), ...(객체 분리 할당시 사용됨)
 
-## 함수 파라미터를 위한 기본값
+## 함수의 파라미터를 위한 기본값 할당
 ```kotlin
 fun foo(a: Int = 0, b: String = "") { ... }
 ```
-## 리스트 필터링
+
+## 리스트 필터링하기
 ```kotlin
 val positives = list.filter { x -> x > 0 }
 ```
-혹은 더 짧게:
+혹은 더 짧게 할 수도 있다:
 ```kotlin
 val positives = list.filter { it > 0 }
 ```
-## 컬렉션에 요소가 존재하는지 확인
+
+## 컬렉션에 특정 요소가 존재하는지 확인하기
 ```kotlin
     if ("john@example.com" in emailList) { ... }
     if ("jane@example.com" !in emailList) { ... }
 ```
-## 스트링 중간에 변수 삽입
+
+## 스트링 중간에 변수 포함시키기
 ```kotlin
 println("Name $name")
 ```
+
 ## 인스턴스 검사
 ```kotlin
 when (x) {
@@ -49,13 +60,15 @@ when (x) {
     else    -> ...
 }
 ```
+
 ## Pair의 맵/리스트 순회하기
 ```kotlin
 for ((k, v) in map) {
     println("$k -> $v")
 }
 ```
-## 범위값 사용하기
+
+## 범위값 활용하기
 ```kotlin
 for (i in 1..100) { ... }
 for (i in 1 until 100) { ... }  // 반만 열린 범위. 100을 포함하지 않음
@@ -63,56 +76,70 @@ for (x in 2..10 step 2) { ... } // 2, 4, ... 10)
 for (x in 10 downTo 1) { ... } // 10, 9, ... 1
 if (x in 1..10) { ... }
 ```
+
 ## 읽기 전용 리스트
 ```kotlin
 val list = listOf("a", "b", "c")
 ```
+
 ## 읽기 전용 맵
 ```kotlin
 val map = mapOf("a" to 1, "b" to 2, "c" to 3)
 ```
+
 ## 맵에 접근하기
 ```kotlin
 println(map["key"])
 map["key"] = value
 ```
-## Lazy 프로퍼티*
+
+## Lazy 프로퍼티(초기화 지연)
 ```kotlin
 val p: String by lazy {
     // 스트링 값 계산
 }
 ```
+
 ## 확장 함수
+기존 클래스에 함수를 추가할 수 있다.
 ```kotlin
 fun String.spaceToCamelCase() = { ... }
 "Convert this to camelCase".spaceToCamelCase()
 ```
-## 싱글턴 생성*
+
+## 싱글턴 생성
 ```kotlin
 object Resource {
     val name = "Name"
 }
 ```
-## null이 아니면 -> 짧은 표현
+
+## null일 수 있는 변수를 간단하게 처리하기
 ```kotlin
 val files = File("Test").listFiles()
 println(files?.size)
 ```
-## null이 아니면, 그 외의 경우 -> 짧은 표현
+-> files가 null이 아닐 경우 size를, 아니면 null을 출력하게 된다.
+
+## null일 수 있는 변수 처리시 null일 경우에 대한 대체값 지정하기
 ```kotlin
 val files = File("Test").listFiles()
 println(files?.size ?: "empty")
 ```
-## null일 경우 구문 실행
+-> files가 null이 아닐 경우 size를, 아니면 'empty'를 출력한다.
+
+## null일 수 있는 변수 처리시 null일 경우 구문 실행하기
 ```kotlin
 val values = ...
 val email = values["email"] ?: throw IllegalStateException("Email is missing!")
 ```
+
 ## 비어 있을 수도 있는 컬렉션의 첫 번째 요소 가져오기
 ```kotlin
 val emails = ...
 val mailEmail = emails.firstOrNull() ?: ""
 ```
+
 ## null이 아닐 경우 실행
 ```kotlin
 val values = ...
@@ -120,11 +147,13 @@ value?.let {
     ...
 }
 ```
-## null이 아닌 경우 nullable 값 적용하기
+
+## null이 아닐 경우 
 ```kotlin
 val value = ...
 val mapped = value?.let { transformValue(it) } ?: defaultValueIfValueIsNull
 ```
+
 ## when 구문에서 리턴하기
 ```kotlin
 fun transform(color: String): Int {
@@ -136,6 +165,7 @@ fun transform(color: String): Int {
     }
 }
 ```
+
 ## 'try/catch' 표현식
 ```kotlin
 fun test() {
@@ -148,6 +178,7 @@ fun test() {
     // result로 작업
 }
 ```
+
 ## 'if' 표현식
 ```kotlin
 fun foo(param: Int) {
@@ -160,12 +191,14 @@ fun foo(param: Int) {
     }
 }
 ```
+
 ## Unit을 반환하는 함수의 Builder 스타일 사용
 ```kotlin
 fun arrayOfMinusOnes(size: Int): IntArray {
     return IntArray(size).apply { fill (-1) }
 }
 ```
+
 ## 단일 표현식 함수
 ```kotlin
 fun theAnswer() = 42
@@ -176,7 +209,7 @@ fun theAnswer(): Int {
     return 42
 }
 ```
-다른 관용법과 결합하여 더 짧은 코드를 작성할 수 있게 된다. 예) when과 함께 사용
+다른 관용구과 결합하여 더 짧은 코드를 작성할 수 있게 된다. 예) when과 함께 사용
 ```kotlin
 fun transform(color: String): Int = when (color) {
     "Red" -> 0
@@ -185,6 +218,7 @@ fun transform(color: String): Int = when (color) {
     else -> throw IllegalArgumentException("Invalid color param value")
 }
 ```
+
 ## 객체 인스턴스에서 여러 함수 호출하기
 ```kotlin
 class Turtle {
@@ -204,6 +238,7 @@ with(myTurtle) { // 100픽셀의 사각형 그리기
     penUp()
 }
 ```
+
 ## java 7의 try with resources
 ```kotlin
 val Stream = Files.newInputStream(Paths.get("/some/file.txt"))
@@ -211,6 +246,7 @@ stream.buffered().reader().use { reader ->
     println(reader.readText())
 }
 ```
+
 ## 제네릭 타입 정보를 필요로 하는 제네릭 함수의 편리한 폼
 ```kotlin
 // public final class Gson {
@@ -220,6 +256,7 @@ stream.buffered().reader().use { reader ->
 
 inline fun <reified T: Any> Gson.fromJson(json: JsonElement): T = this.fromJson(json, T::class.java)
 ```
+
 ## null이 될 수 있는 Boolean 값 사용하기
 ```kotlin
 val b: Boolean? = ...
@@ -229,6 +266,7 @@ if (b == true) {
     // `b` 는 false 혹은 null이다.
 }
 ```
+
 ## 변수의 값을 서로 바꾸기*
 ```kotlin
 var a = 1
